--- a/style.css
+++ b/style.css
@@ -1,11 +1,142 @@
 h2 {
-  color: red;
+  font-family: 'Ephesis', cursive;
+  font-size: 50px;
 }
 
 h3 {
-  color: green;
+  font-family: 'Roboto', sans-serif;
 }
 
-p {
+a {
+  font-family: 'Gemunu Libre', sans-serif;
+}
+
+.contenedor-listas {
+  background-color: silver;
+}
+
+#titulo-app-gatos {
+  font-size: 30px;
+  color: green;
+  
+}
+
+#imagen-de-gatos {
+  border-radius: 50%;
+  border-width: 5px;
+  border-style: solid;
+  border-color: red;
+}
+
+#lista-gatos-aman {
+  font-size: 15px;
+  color: blueviolet;
+}
+
+#lista-gatos-odian {
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+  margin: 25px;
+  padding: 25px;
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
+}
+
+img[alt] {
+  border-radius: 50%;
+}
+
+[type="radio"] {
+  margin: 5px;
+}
+
+input[type="checkbox"]{
+  margin: 8px;
+}
+
+a[href="https://www.freecodecamp.org/espanol/"]{
+  color: green;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+#contenedor-principal {
+  color: white;
+  padding: 5px;
+  font-size: 25px;
+  background-color: yellow;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.rectangulo {
+  padding: 5px;
+  margin: 5px;
+}
+
+.px {
+  background-color: crimson;
+  width: 200px;
+}
+
+.vw {
+  background-color: darkmagenta;
+  width: 20vw;
+}
+
+.em {
+  background-color: green;
+  width: 15em;
+  font-size:1.5em;
+}
+
+body {
+  background-color: silver;
+  color: chocolate;
+}
+
+h4 {
+  margin-bottom: 5px;
+}
+.texto-azul {
+  color: blue !important;
+}
+
+.texto-morado {
   color: purple;
+}
+
+a {
+  text-decoration: purple wavy underline;
+}
+
+.sin-subrayado {
+  text-decoration: none;
+}
+
+#titulo {
+  color: purple;
+}
+
+#enlace-principal {
+  color: green;
+  text-decoration: green wavy underline;
+}
+
+/* Hexadecimal Code 0-9 A-F 
+
+  # FF  FF     FF
+   Rojo Verde Azul
+*/
+
+div {
+  background-color: #000000;
+}
+
+/* RGB */
+h2 {
+  color: rgba(255, 0, 0, 1);
 }
